--- a/src/main/webapp/resources/css/auto.css
+++ b/src/main/webapp/resources/css/auto.css
@@ -1,4 +1,5 @@
-#autoDealershipText, #autoGarageText, #autoWorkshopText, #carWashText {
+#fAutoDealershipText, #fAutoGarageText, #fAutoWorkshopText, #fCarWashText,
+#gCarDealerText, #gCarRentalText, #gCarRepairText, #gCarWashText {
     visibility: hidden;
     position: absolute;
     z-index: 1;
@@ -13,11 +14,12 @@
     box-shadow: 1px 1px 0 0 #FFF, 5px 5px 40px 2px #5f5f5f inset;
     -moz-box-shadow: 1px 1px 0 0 #FFF, 5px 5px 40px 2px #BBB inset;
     -webkit-box-shadow: 1px 1px 0 0 #FFF, 5px 5px 40px 2px #BBB inset;
+    background: -webkit-linear-gradient(top, #00bf00 0%, #00bf00 100%);
     -webkit-background-clip: padding-box;
     outline: 0;
 }
 
-#autoDealership, #autoGarage, #autoWorkshop, #carWash {
+#fAutoDealership, #fAutoGarage, #fAutoWorkshop, #fCarWash, #gCarDealer, #gCarRental, #gCarRepair, #gCarWash {
     visibility: hidden;
     position: absolute;
     z-index: 1;
@@ -25,29 +27,53 @@
     margin-top: 40px;
 }
 
-/* autoGarage */
-#autoGarageText {
+/* fAutoGarage */
+#fAutoGarageText {
     top: 65px;
 }
 
-#autoGarage {
+#fAutoGarage {
     margin-top: 95px;
 }
 
-/* autoWorkshop */
-#autoWorkshopText {
+#gCarRentalText {
+    top: 65px;
+}
+
+#gCarRental {
+    margin-top: 95px;
+}
+
+/* fAutoWorkshop */
+#fAutoWorkshopText {
     top: 120px;
 }
 
-#autoWorkshop {
+#fAutoWorkshop {
     margin-top: 150px;
 }
 
-/* poolHall */
-#carWashText {
+#gCarRepairText {
+    top: 120px;
+}
+
+#gCarRepair {
+    margin-top: 150px;
+}
+
+/* fCarWash  */
+#fCarWashText {
     top: 175px;
 }
 
-#carWash {
+#fCarWash {
+    margin-top: 205px;
+}
+
+#gCarWashText {
+    top: 175px;
+}
+
+#gCarWash {
     margin-top: 205px;
 }
