--- a/src/main/webapp/resources/css/culture.css
+++ b/src/main/webapp/resources/css/culture.css
@@ -10,6 +10,8 @@
     border-radius: 10px;
     right: 12px;
     text-align: center;
+    font-size: 90%;
+    color: rgba(0, 0, 0, 0.94);
     -moz-border-radius: 10px;
     -webkit-border-radius: 10px;
     box-shadow: 1px 1px 0 0 #FFF, 5px 5px 40px 2px #5f5f5f inset;
